terraform/kube-manifests/cluster-ip.yml
apiVersion: v1
kind: Service
metadata:
  name: learn-devops-clusterip-service
  labels:
    app: learn-devops
spec:
  type: ClusterIP
  selector:
    app: learn-devops
  ports:
    - port: 8080
      targetPort: 8080
